@@ -1,3 +1,8 @@
+2006-02-21  Anthony Balkissoon  <abalkiss@redhat.com>
+
+	* java/math/MathContext.java: New class.
+	* java/math/RoundingMode: New Enum.
+
 2006-01-15  Tom Tromey  <tromey@redhat.com>
 
 	* javax/swing/text/html/HTMLDocument.java (parseBuffer): Genericized.
